ui: minor open menu and headerbar spacing fixes

--- a/aardvark-app/src/style.css
+++ b/aardvark-app/src/style.css
@@ -31,7 +31,7 @@
 }
 
 .connection-popover list {
- margin: 9px 3px;
+    margin: 3px 3px;
 }
 
 .this-device-pill {
@@ -52,8 +52,8 @@
 }
 
 .open-popover row {
-  border-radius: 6px;
-  margin: 6px;
+  border-radius: 8px;
+  margin: 2px 6px;
 }
 
 .open-popover .open-document {
